--- a/cfp.html
+++ b/cfp.html
@@ -21,8 +21,8 @@ slide_id: 2
             </p>
 
             <p>
-                To prepare your submission, please use the LaTeX source files
-                listed on the website, and follow the instructions provided.
+                To prepare your submission, please use the Template
+                given on the website, and follow the instructions provided.
             </p>
         </div>
 
