--- a/registration.html
+++ b/registration.html
@@ -24,6 +24,11 @@ slide_id: 3
                 {{site.data.registration.description}}
             </p>
             {% endif %}
+            <h5>Visa</h5>
+            <p>
+                If you are an international traveller and need a visa to enter
+                {{site.data.conference.country}}, please contact us after your paper is accepted.
+            </p>
             {% include contact-us.html %}
     </div>
 </div>
