--- a/submission.html
+++ b/submission.html
@@ -65,12 +65,13 @@ slide_id: 3
             </a>
         </p>
 
-        {% include contact-us.html %}
-
     </div>
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
         <!--######### important dates ##########-->
         {% include card-important-dates.html %}
         <!--####################################-->
+        <!--######### contact us ##########-->
+        {% include contact-us.html %}
+        <!--###############################-->
     </div>
 </div>
