--- a/submission.html
+++ b/submission.html
@@ -67,11 +67,14 @@ slide_id: 3
 
     </div>
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-        <!--######### important dates ##########-->
+        <!-- news -->
+        {% include card-news.html %}
+        <!-- ---- -->
+        <!-- important dates -->
         {% include card-important-dates.html %}
-        <!--####################################-->
-        <!--######### contact us ##########-->
+        <!-- ---------------- -->
+        <!-- contact -->
         {% include contact-us.html %}
-        <!--###############################-->
+        <!-- ------- -->
     </div>
 </div>
