corrections in committee

--- a/submission.html
+++ b/submission.html
@@ -22,7 +22,7 @@ slide_id: 3
             <li>Correspondence will be sent to all listed authors, so ensure that all email addresses in CMT are correct.</li>
             <li>Each paper must include a <strong>minimum of 15 references</strong>.</li>
             <li><strong>Plagiarism should be less than 10%</strong> (Excluding References). Keep the Plagiarism Report along with manuscript [TURNITIN].</li>
-            <li><strong class="text-danger">Use of AI-generated writing or ChatGPT is strictly prohibited.</strong></li>
+            <li><strong class="text-danger">Use of AI-generated writing or ChatGPT is strictly prohibited. Keep the 0% AI Report along with manuscript.</strong></li>
             <li>Grammatical errors must NOT be there. Language clarity is very much expected, and the final manuscript should be reviewed by a language expert. Any sort of dispute may lead to direct rejection by Springer.</li>
             <li><strong class="text-danger">NO Figure and NO Table should be copied from any other paper/Internet.</strong> This activity may lead to direct rejection. Quality of the figures should be high resolution.</li>
             <li><strong>Page Limit:</strong> Minimum 08 Pages and Maximum 09 Pages after compliance with Springer Format.</li>
