--- a/submission.html
+++ b/submission.html
@@ -55,8 +55,8 @@ slide_id: 3
                 <strong>{{site.data.submission.portal}}</strong>
             </a>
         </p>
-        <p class="text-muted" style="font-size: 90%;">
-            The Microsoft CMT service was used for managing the peer-reviewing process for this conference. This service was provided for free by Microsoft and they bore all expenses, including costs for Azure cloud services as well as for software development and support.
+        <p>
+            CMT Acknowledgment: The Microsoft CMT service was used for managing the peer-reviewing process for this conference. This service was provided for free by Microsoft and they bore all expenses, including costs for Azure cloud services as well as for software development and support.
         </p>
         <p>
             The authors will need to register their email with CMT to submit paper to ICAANS 2026. 
