Added right side column to review and ethics pages

--- a/ethics.html
+++ b/ethics.html
@@ -126,4 +126,15 @@ slide_id: 3
         </ul>
 
     </div>
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+        <!-- news -->
+        {% include card-news.html %}
+        <!-- ---- -->
+        <!-- important dates -->
+        {% include card-important-dates.html %}
+        <!-- ---------------- -->
+        <!-- contact -->
+        {% include contact-us.html %}
+        <!-- ------- -->
+    </div>
 </div>
