--- a/review_process.html
+++ b/review_process.html
@@ -102,4 +102,15 @@ slide_id: 3
         <p>Reviewers must declare conflicts and recuse themselves.</p>
 
     </div>
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+        <!-- news -->
+        {% include card-news.html %}
+        <!-- ---- -->
+        <!-- important dates -->
+        {% include card-important-dates.html %}
+        <!-- ---------------- -->
+        <!-- contact -->
+        {% include contact-us.html %}
+        <!-- ------- -->
+    </div>
 </div>
